= 2.26.0 (2017-05-16)

* Support :skip_middleware option to csrf plugin to add only the methods and not add the middleware (luciusgone) (#118)

* Handle multiple types with matching suffixes in the type_routing plugin (e.g. tar.gz and gz) (tomdalling) (#117)

= 2.25.0 (2017-04-18)

* Add error_mail plugin, similar to error_email but using mail instead of net/smtp directly (jeremyevans)

= 2.24.0 (2017-03-15)

* Have h plugin use cgi/escape if available for faster escaping (jeremyevans)

* Add disallow_file_uploads plugin for raising an exception if a multipart file upload is attempted (jeremyevans)

* Add strip_path_prefix plugin for stripping prefixes off of internal absolute paths, making them relative paths (jeremyevans)

* Add Roda.expand_path method to DRY up path expansion (jeremyevans)

* Support :freeze_middleware option, which freezes all middleware instances when building the rack app (jeremyevans)

* Allow middleware plugin to accept a block that will be used to configure the application when used as middleware (jeremyevans)

* Support an options hash when loading the cookies plugin, that will be used as the defaults for setting and deleting cookies (mwpastore, jeremyevans) (#112)

* Make the static_routing plugin work with the hooks plugin if the hooks plugin is loaded first (jeremyevans) (#110)

* Do not modify the render plugin's cache if loading the plugin multiple times (jeremyevans)

= 2.23.0 (2017-02-24)

* Add :inherit_cache render plugin option, to create a copy of the cache for subclasses, instead of using an empty cache (jeremyevans)

* In development mode, default to :explicit_cache=>true, :cache=>true instead of :cache=>false (jeremyevans)

* Add :explicit_cache render plugin option, to only cache templates if the :cache option is given to render/view (jeremyevans)

* Add error_email_content method to error_email plugin (jeremyevans)

* Make error_email method in error_email plugin support non-exception arguments (jeremyevans)
